--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -108,33 +108,33 @@
         <div class="uk-margin-small">
             <label class="uk-form-label" for="dailyGains">Daily PHR Gained</label>
             <div class="uk-form-controls">
-                <input type="number" class="uk-input uk-form-width-medium" id="dailyGains" v-model="dailyGains" disabled>
+                <input type="number" class="uk-input uk-form-width-medium" id="dailyGains" v-model="dailyGains" disabled><label id="dailyGains"></label>
             </div>
         </div>
         <div class="uk-margin-small">
             <label class="uk-form-label" for="weeklyGains">Weekly PHR Gained</label>
             <div class="uk-form-controls">
-                <input type="number" class="uk-input uk-form-width-medium" id="weeklyGains" v-model="weeklyGains" disabled>
+                <input type="number" class="uk-input uk-form-width-medium" id="weeklyGains" v-model="weeklyGains" disabled><label id="weeklyGains"></label>
             </div>
         </div>
         <div class="uk-margin-small">
             <label class="uk-form-label" for="monthlyGains">Monthly PHR Gained</label>
             <div class="uk-form-controls">
-                <input type="number" class="uk-input uk-form-width-medium" id="monthlyGains" v-model="monthlyGains" disabled>
+                <input type="number" class="uk-input uk-form-width-medium" id="monthlyGains" v-model="monthlyGains" disabled><label id="monthlyGains"></label>
             </div>
         </div>
         <div class="uk-margin-small">
             <label class="uk-form-label" for="yearlyGains">Yearly PHR Gained</label>
             <div class="uk-form-controls">
                 <input type="number" class="uk-input uk-form-width-medium" id="yearlyGains"
-                       v-model="yearlyGains" disabled>
+                       v-model="yearlyGains" disabled><label id="yearlyGains"></label>
             </div>
         </div>
         <div class="uk-margin-small">
             <label class="uk-form-label green" for="roi">Return on Investment</label>
             <div class="uk-form-controls">
                 <input type="text" class="uk-input uk-form-width-medium" id="roi"
-                       v-model="roi" disabled>
+                       v-model="roi" disabled><label id="roi"></label>
             </div>
         </div>
 
