--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -75,20 +75,25 @@
 <body>
                 <table>
                     <tr>
-                        <td><label id="entry_coins">Number Of Coins</label></td>
-                        <td><input type="number" id="NumberOfCoinsStart" value="1000" onBlur="return is_int(this)"></td>
+                        <td><label id="entry_coins">stakingAmount</label></td>
+                        <td><input type="number" id="stakingAmount" value="" onBlur="return is_int(this)"></td>
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
                         <td><label id="entry_days">Age of transaction (days)</label></td>
-                        <td><input type="number" id="AgeOfTransaction" value="31"></td>
+                        <td><input type="number" id="totalStaking" value="31"></td>
                         <td style="color:red;font-size:80%" id="AgeOfTransaction_error">Probability maxed at 90 days</td>
                     </tr>
                     <tr>
                         <td><label id="entry_difficulty">POS difficulty</label></td>
-                        <td><input type="number" id="POSDifficulty" value="10"></td>
+                        <td><input type="number" id="lockedIn" value="10"></td>
                         <td>&nbsp;</td>
                     </tr>
+                    <tr>
+                        <td><label id="entry_difficulty">POS difficulty</label></td>
+                        <td><input type="number" id="blockRewards" value="10"></td>
+                        <td>&nbsp;</td>
+                    </tr>					
                 </table>
                 <br>
                 <table class=result>
