--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -81,17 +81,16 @@
                     </tr>
                     <tr>
                         <td><label id="entry_days">Age of transaction (days)</label></td>
-                        <td><input type="number" id="totalStaking" value="31"></td>
-                        <td style="color:red;font-size:80%" id="AgeOfTransaction_error">Probability maxed at 90 days</td>
+                        <td><input type="number" id="totalStaking" value=""></td>
                     </tr>
                     <tr>
                         <td><label id="entry_difficulty">POS difficulty</label></td>
-                        <td><input type="number" id="lockedIn" value="10"></td>
+                        <td><input type="number" id="lockedIn" value=""></td>
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
                         <td><label id="entry_difficulty">POS difficulty</label></td>
-                        <td><input type="number" id="blockRewards" value="10"></td>
+                        <td><input type="number" id="blockRewards" value=""></td>
                         <td>&nbsp;</td>
                     </tr>					
                 </table>
