--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -76,7 +76,7 @@
                 <table>
                     <tr>
                         <td><label id="entry_coins">stakingAmount</label></td>
-                        <td><input type="number" id="stakingAmount" value="" onBlur="return is_int("></td>
+                        <td><input type="number" id="stakingAmount" value="" ></td>
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
