--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -32,8 +32,8 @@
 	<script>
 		var xmlhttp = new XMLHttpRequest();
 		xmlhttp.onreadystatechange = function() {
-			if (readyState == 4 && status == 200) {
-				var myObj = JSON.parse(responseText);						
+			if (this.readyState == 4 && this.status == 200) {
+				var myObj = JSON.parse(this.responseText);							
 				<!-- for(var j = 0; j < myObj.curium.length; j++){ -->
 				document.getElementById('stakingAmount').value = myObj.data[0][0];
 			}
@@ -42,8 +42,8 @@
 		xmlhttp.send();			
 		var xmlhttp = new XMLHttpRequest();
 		xmlhttp.onreadystatechange = function() {
-			if (readyState == 4 && status == 200) {
-				var myObj = JSON.parse(responseText);						
+			if (this.readyState == 4 && this.status == 200) {
+				var myObj = JSON.parse(this.responseText);							
 				<!-- for(var j = 0; j < myObj.curium.length; j++){ -->
 				document.getElementById('totalStaking').value = myObj.data[0][1];
 			}
@@ -52,7 +52,8 @@
 		xmlhttp.send();		
 		var xmlhttp = new XMLHttpRequest();
 		xmlhttp.onreadystatechange = function() {
-			if (readyState == 4 && status == 200) {
+			if (this.readyState == 4 && this.status == 200) {
+				var myObj = JSON.parse(this.responseText);		
 				var myObj = JSON.parse(responseText);						
 				<!-- for(var j = 0; j < myObj.curium.length; j++){ -->
 				document.getElementById('lockedIn').value = myObj.data[0][2];
@@ -62,8 +63,8 @@
 		xmlhttp.send();
 		var xmlhttp = new XMLHttpRequest();
 		xmlhttp.onreadystatechange = function() {
-			if (readyState == 4 && status == 200) {
-				var myObj = JSON.parse(responseText);						
+			if (this.readyState == 4 && this.status == 200) {
+				var myObj = JSON.parse(this.responseText);							
 				<!-- for(var j = 0; j < myObj.curium.length; j++){ -->
 				document.getElementById('blockRewards').value = myObj.data[0][3];
 			}
