--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -85,7 +85,7 @@
                         <td><input type="number" id="totalStaking" value=""></td>
                     </tr>
                     <tr>
-                        <td><label id="entry_difficulty">POS difficulty</label></td>
+                        <td><label id="entry_diflty">POS difficulty</label></td>
                         <td><input type="number" id="lockedIn" value=""></td>
                         <td>&nbsp;</td>
                     </tr>
